# sd-qa-ml

./: pyproject.toml
data/processed/: tickets.csv  tickets_augmented.csv
data/raw/: IncidentDetails.xlsx
models/score_bucket/: model.joblib
qa_ml/: augment_data.py  clean_data.py  features.py  inspect_data.py  models.py  plot_score.py  schema.py  serve_api.py  train_identity.py  train_score_bucket.py
