[project]
name = "sd-qa-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "emilianorobles",email = "54684285+emilianorobles@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
